--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "focus-visible": "^5.2.0",
     "fs-extra": "^10.1.0",
     "next": "^12.3.0",
+    "nextjs-google-analytics": "^2.1.0",
     "postcss-focus-visible": "^6.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
