--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
-    "@headlessui/react": "^1.7.0",
-    "@heroicons/react": "^2.0.11",
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.17",
     "@hookform/resolvers": "^2.9.8",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/typography": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.9",
     "adm-zip": "~0.4.3",
-    "autoprefixer": "^10.4.8",
+    "autoprefixer": "^10.4.14",
     "clsx": "^1.2.1",
-    "easy-zip": "^0.0.4",
+    "easy-zip": "master",
     "extract-zip": "^2.0.1",
     "focus-visible": "^5.2.0",
     "fs-extra": "^10.1.0",
@@ -27,19 +27,19 @@
     "postcss-focus-visible": "^6.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.36.1",
+    "react-hook-form": "^7.43.9",
     "replace": "^1.2.1",
     "request": "^2.12.0",
     "rimraf": "^3.0.2",
-    "tailwindcss": "^3.1.8",
+    "tailwindcss": "^3.3.1",
     "universal-analytics": "^0.5.3",
     "vcsurl": "~0.1.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "eslint": "8.19.0",
+    "eslint": "8.38.0",
     "eslint-config-next": "12.2.5",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.1.13"
   }
 }
