--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "adm-zip": "~0.4.3",
+    "archiver": "^5.3.1",
     "autoprefixer": "^10.4.14",
     "clsx": "^1.2.1",
-    "easy-zip": "master",
     "extract-zip": "^2.0.1",
     "focus-visible": "^5.2.0",
     "fs-extra": "^10.1.0",
