Typo on lib name
- Change package name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tailwindui-template",
-  "version": "0.1.0",
+  "name": "wwpp-template",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
