--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "13.4.19",
     "@tailwindcss/typography": "^0.5.4",
+    "@vercel/analytics": "^1.0.2",
     "adm-zip": "~0.5.10",
     "archiver": "^6.0.1",
     "autoprefixer": "^10.4.12",
