--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -34,6 +35,7 @@
     "google-analytics-ga4": "^1.0.0",
     "jszip": "^3.10.1",
     "next": "13.4.19",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
     "node-fetch": "^3.3.2",
     "original-fs": "^1.2.0",
