--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "13.4.19",
+    "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.4",
     "@vercel/analytics": "^1.2.2",
     "adm-zip": "~0.5.12",
