--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "13.4.19",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.4",
     "@vercel/analytics": "^1.2.2",
@@ -27,7 +29,8 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
     "cheerio": "^1.0.0-rc.12",
-    "clsx": "^2.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "extract-zip": "^2.0.1",
     "fast-glob": "^3.3.2",
     "feed": "^4.2.2",
@@ -35,6 +38,7 @@
     "fs-extra": "^11.2.0",
     "google-analytics-ga4": "^1.0.0",
     "jszip": "^3.10.1",
+    "lucide-react": "^0.438.0",
     "next": "13.4.19",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
@@ -50,7 +54,9 @@
     "replace-in-file": "^7.1.0",
     "request": "^2.12.0",
     "rimraf": "^3.0.2",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "universal-analytics": "^0.5.3",
     "vcsurl": "~0.1.0",
     "yup": "^1.4.0"
