--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "13.4.19",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.4",
@@ -49,6 +50,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.1",
     "react-icons": "^4.11.0",
+    "recharts": "^2.12.7",
     "remark-gfm": "^3.0.1",
     "replace": "^1.2.2",
     "replace-in-file": "^7.1.0",
