--- a/package.json
+++ b/package.json
@@ -41,14 +41,14 @@
     "google-analytics-ga4": "^1.0.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.438.0",
-    "next": "13.4.19",
+    "next": "^14.2.8",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
     "node-fetch": "^3.3.2",
     "original-fs": "^1.2.0",
     "postcss-focus-visible": "^9.0.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.1",
     "react-icons": "^4.11.0",
     "recharts": "^2.12.7",
@@ -66,7 +66,7 @@
   },
   "devDependencies": {
     "eslint": "8.57.0",
-    "eslint-config-next": "14.1.4",
+    "eslint-config-next": "^14.2.8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.12",
     "sharp": "^0.32.0"
